# Library_dashboard

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICK_START_GUIDE.md  README_IMPLEMENTATION.md  TESTING_GUIDE.md  note.txt
Backend/: BACKEND_FIXES_REQUIRED.md  main.py  pyproject.toml
Backend/app/: app.py  db.py  filepath.py
Backend/app/basemodel/: shcemas.py
Backend/app/services/: bookservice.py  emailService.py  loginService.py
Backend/database/: database.db
Frontend/: FRONTEND_IMPLEMENTATION_SUMMARY.md  apis.js  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  apis.js  styles.css
Frontend/src/component/: card.jsx  footer.jsx  navbar.jsx  sidebar.jsx
Frontend/src/pages/: Auth.jsx  home.jsx  login.jsx
