[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.8",
    "mysql>=0.0.3",
    "mysql-connector>=2.2.9",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.39.0",
]
